# awesome-fibonacci

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
C/: fibonacci.c  fibonacci.h  fibonacci_test.c
Go/: fibonacci.go  fibonacci_test.go  go.mod
Lisp/: fibonacci.lisp  fibonacci_test.lisp
Python/: closed_form_fibonacci.py  fast_doubling_fibonacci.py  linear_fibonacci.py  matrix_fibonacci.py  memoized_fibonacci.py  recursive_fibonacci.py  test_fibonacci.py  test_recursive_fibonacci.py
Rust/: Cargo.toml
Rust/src/: lib.rs  main.rs
Rust/tests/: fibonacci.rs
