[package]
name = "fibonacci"
version = "0.1.0"
authors = ["mhtb <mhtb32@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fibonacci"
path = "src/lib.rs"

[[bin]]
name = "fibonacci"
path = "src/main.rs"

[dependencies]
